@@ -106,7 +106,12 @@ if (count($plugins_list) > 0) {
         include_file('3rdparty', 'jwerty/jwerty', 'js');
         include_file('3rdparty', 'jquery.packery/jquery.packery', 'js');
         include_file('3rdparty', 'jquery.lazyload/jquery.lazyload', 'js');
-
+        if (file_exists(dirname(__FILE__) . '/../custom/custom.js')) {
+            include_file('desktop', '', 'custom.js');
+        }
+        if (file_exists(dirname(__FILE__) . '/../custom/custom.css')) {
+            include_file('desktop', '', 'custom.css');
+        }
         if (isConnect() && $_SESSION['user']->getOptions('desktop_highcharts_theme') != '') {
             try {
                 include_file('3rdparty', 'highstock/themes/' . $_SESSION['user']->getOptions('desktop_highcharts_theme'), 'js');
@@ -226,6 +231,11 @@ if (count($plugins_list) > 0) {
                                                     if (hasRight('logview', true)) {
                                                         ?>
                                                         <li class="expertModeVisible"><a href="index.php?v=d&p=log"><i class="fa fa-file-o"></i> {{Log}}</a></li>
+                                                        <?php
+                                                    }
+                                                     if (hasRight('customview', true)) {
+                                                        ?>
+                                                        <li class="expertModeVisible"><a href="index.php?v=d&p=custom"><i class="fa fa-pencil-square-o"></i> {{Personalisation avancée}}</a></li>
                                                         <?php
                                                     }
                                                     ?>
