@@ -109,7 +109,14 @@ function initApplication(_reinit) {
                             include.push('3rdparty/highstock/themes/' + userProfils.mobile_highcharts_theme + '.js');
                         }
                     }
-
+                    if (isset(data.result.custom) && data.result.custom != null) {
+                        if (isset(data.result.custom.js) && data.result.custom.js) {
+                            include.push('mobile/custom/custom.js');
+                        }
+                        if (isset(data.result.custom.css) && data.result.custom.css) {
+                            include.push('mobile/custom/custom.css');
+                        }
+                    }
                     $.get("core/php/icon.inc.php", function (data) {
                         $("head").append(data);
                         $.include(include, function () {
